--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ author:
   github                    : NicholasBuse
   youtube                   : # MNBooZe
   stackoverflow             : # nicholas-buse
-  disqus                    : nicholasbuse # your disqus site name
+  disqus                    : # disable for now: nicholasbuse # your disqus site name
   google_analytics          : 'UA-64642815-1'
   photo                     : "uploads/me2.png"
   photo2x                   : "uploads/me.png"
